[metadata]
name = logitorch
version = 0.0.0
author = Chadi Helwe
author_email = chadi.helwe@gmail.com
url = https://github.com/ChadiHelwe/logitorch
license = Apache License 2.0
description = LogiTorch is a pytorch-based library for logical reasoning in natural language
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =logitorch
install_requires = 
    torch
    pytorch-lightning
    transformers
    allennlp
    allennlp_models
    requests
    tqdm
    textblob
    nltk

[options.extras_require]
dev = 
    tox
    isort
    mypy
    black
    pytest
    flake8
    pre-commit
    types-requests
    sphinx
    sphinx-autoapi
    furo

[options.packages.find]
where = logitorch
exclude = test*

[flake8]
max-line-length = 88
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    env,
    build,
    dist
extend-ignore = 
    E203
    E501
