[metadata]
name = logitorch
version = 0.0.1a1
author = Chadi Helwe
author_email = chadi.helwe@gmail.com
url = https://github.com/ChadiHelwe/logitorch
license = Apache License 2.0
description = LogiTorch is a pytorch-based library for logical reasoning in natural language
long_description_content_type = text/markdown
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    torch~=1.11.0
    pytorch-lightning~=1.6.0
    transformers~=4.20.0
    allennlp~=2.10.0
    allennlp_models~=2.10.0
    requests~=2.28.0
    tqdm~=4.64.0
    textblob~=0.17.0
    nltk~=3.7.0
    protobuf==3.20.0

[options.extras_require]
dev =
    tox~=3.25.0
    isort~=5.9.0
    mypy~=1.2.0
    black~=19.0
    pytest~=7.1.0
    flake8~=3.9.0
    pre-commit~=2.20.0
    types-requests~=2.28.0
    sphinx~=4.4.0
    sphinx-autoapi~=1.8.0
    furo~=2022.6.0

[options.packages.find]
where = src
exclude = test*

[flake8]
max-line-length = 88
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    env,
    build,
    dist
extend-ignore =
    E203
    E501
